Name:		hxournal-idmap-server
Version:	0.0.999
Synopsis:	CRUD sample server
Description: 	CRUD sample server
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8

Executable hxournal-idmap-server
  Main-is: hxournal-idmap-server.hs
  hs-source-dirs: exe
  Build-Depends: base == 4.*, 
                 yesod == 0.9.*, 
                 uuid == 1.2.*,
                 bytestring == 0.9.*, 
                 containers == 0.4.*, 
                 acid-state == 0.6.*, 
                 hxournal-idmap-type >= 0.0.999 && < 0.2,
                 hxournal-idmap-server
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base == 4.*, 
                 containers == 0.4.*, 
                 mtl == 2.*, 
                 yesod == 0.9.*, 
                 hxournal-idmap-type >= 0.0.999 && < 0.2, 
                 safecopy == 0.6.*, 
                 acid-state == 0.6.*, 
                 aeson == 0.4.*, 
                 bytestring == 0.9.*, 
                 enumerator == 0.4.*, 
                 uuid == 1.2.*,
                 wai-extra == 0.4.*, 
                 wai == 0.4.*,
                 attoparsec == 0.10.*, 
                 text == 0.11.*, 
                 yesod-core == 0.9.*, 
                 yesod-form == 0.3.*, 
                 blaze-html == 0.4.*, 
                 time == 1.2.*, 
                 old-locale == 1.0.*
  Exposed-Modules: 
                   Database.HXournal.IDMap.Server.Type
                   Database.HXournal.IDMap.Server.Yesod



		 